--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -4733,6 +4733,9 @@ input[type="button"].btn-block {
 }
 
 .navbar-expand {
+  background-image: linear-gradient(to right, #053F68, #B0C4DE);
+  min-height: 300px;
+  -webkit-box-sizing: border-box;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
   -ms-flex-flow: row nowrap;
@@ -6837,6 +6840,10 @@ button.bg-dark:focus {
 
 .bg-white {
   background-color: #fff !important;
+}
+
+.bg-FUCK {
+  background-color: #BDB76B !important;
 }
 
 .bg-transparent {
@@ -10501,10 +10508,11 @@ a:focus {
 }
 
 .bg-gradient-primary {
-  background-color: #4e73df;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(10%, #4e73df), to(#224abe));
+  background-color: #003b64;
+
+/*  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(10%, #4e73df), to(#224abe));
   background-image: linear-gradient(180deg, #4e73df 10%, #224abe 100%);
-  background-size: cover;
+  background-size: cover;*/
 }
 
 .bg-gradient-success {
