--- a/css/sb-admin-2.css
+++ b/css/sb-admin-2.css
@@ -4733,8 +4733,8 @@ input[type="button"].btn-block {
 }
 
 .navbar-expand {
-  background-image: linear-gradient(to right, #053F68, #B0C4DE);
-  min-height: 300px;
+  background-image: linear-gradient(45deg, #053F68, #B0C4DE);
+  min-height: 150px;
   -webkit-box-sizing: border-box;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
@@ -10276,7 +10276,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .text-white-50 {
-  color: rgba(255, 255, 255, 0.5) !important;
+  color: rgba(255, 255, 255, 1) !important;
 }
 
 .text-hide {
@@ -11278,6 +11278,12 @@ a:focus {
 
 .sidebar-dark.toggled #sidebarToggle::after {
   color: rgba(255, 255, 255, 0.5);
+}
+
+.logo {
+  width: 5rem;
+  height: 5rem;
+  margin-top: 3rem;
 }
 
 .btn-circle {
